--- a/index.html
+++ b/index.html
@@ -12,73 +12,78 @@
 
 <body>
     <div class="board">
-        <table>
+        <div id="messageArea" class="message-area"></div>
+        <table class="table">
             <tbody>
                 <tr>
-                    <td id="00"></td>
-                    <td id="01"></td>
-                    <td id="02"></td>
-                    <td id="03"></td>
-                    <td id="04"></td>
-                    <td id="05"></td>
-                    <td id="06"></td>
+                    <td id="00" class="table-cell"></td>
+                    <td id="01" class="table-cell"></td>
+                    <td id="02" class="table-cell"></td>
+                    <td id="03" class="table-cell"></td>
+                    <td id="04" class="table-cell"></td>
+                    <td id="05" class="table-cell"></td>
+                    <td id="06" class="table-cell"></td>
                 </tr>
                 <tr>
-                    <td id="10"></td>
-                    <td id="11"></td>
-                    <td id="12"></td>
-                    <td id="13"></td>
-                    <td id="14"></td>
-                    <td id="15"></td>
-                    <td id="16"></td>
+                    <td id="10" class="table-cell"></td>
+                    <td id="11" class="table-cell"></td>
+                    <td id="12" class="table-cell"></td>
+                    <td id="13" class="table-cell"></td>
+                    <td id="14" class="table-cell"></td>
+                    <td id="15" class="table-cell"></td>
+                    <td id="16" class="table-cell"></td>
                 </tr>
                 <tr>
-                    <td id="20"></td>
-                    <td id="21"></td>
-                    <td id="22"></td>
-                    <td id="23"></td>
-                    <td id="24"></td>
-                    <td id="25"></td>
-                    <td id="26"></td>
+                    <td id="20" class="table-cell"></td>
+                    <td id="21" class="table-cell"></td>
+                    <td id="22" class="table-cell"></td>
+                    <td id="23" class="table-cell"></td>
+                    <td id="24" class="table-cell"></td>
+                    <td id="25" class="table-cell"></td>
+                    <td id="26" class="table-cell"></td>
                 </tr>
                 <tr>
-                    <td id="30"></td>
-                    <td id="31"></td>
-                    <td id="32"></td>
-                    <td id="33"></td>
-                    <td id="34"></td>
-                    <td id="35"></td>
-                    <td id="36"></td>
+                    <td id="30" class="table-cell"></td>
+                    <td id="31" class="table-cell"></td>
+                    <td id="32" class="table-cell"></td>
+                    <td id="33" class="table-cell"></td>
+                    <td id="34" class="table-cell"></td>
+                    <td id="35" class="table-cell"></td>
+                    <td id="36" class="table-cell"></td>
                 </tr>
                 <tr>
-                    <td id="40"></td>
-                    <td id="41"></td>
-                    <td id="42"></td>
-                    <td id="43"></td>
-                    <td id="44"></td>
-                    <td id="45"></td>
-                    <td id="46"></td>
+                    <td id="40" class="table-cell"></td>
+                    <td id="41" class="table-cell"></td>
+                    <td id="42" class="table-cell"></td>
+                    <td id="43" class="table-cell"></td>
+                    <td id="44" class="table-cell"></td>
+                    <td id="45" class="table-cell"></td>
+                    <td id="46" class="table-cell"></td>
                 </tr>
                 <tr>
-                    <td id="50"></td>
-                    <td id="51"></td>
-                    <td id="52"></td>
-                    <td id="53"></td>
-                    <td id="54"></td>
-                    <td id="55"></td>
-                    <td id="56"></td>
+                    <td id="50" class="table-cell"></td>
+                    <td id="51" class="table-cell"></td>
+                    <td id="52" class="table-cell"></td>
+                    <td id="53" class="table-cell"></td>
+                    <td id="54" class="table-cell"></td>
+                    <td id="55" class="table-cell"></td>
+                    <td id="56" class="table-cell"></td>
                 </tr>
                 <tr>
-                    <td id="60"></td>
-                    <td id="61"></td>
-                    <td id="62"></td>
-                    <td id="63"></td>
-                    <td id="64"></td>
-                    <td id="65"></td>
-                    <td id="66"></td>
+                    <td id="60" class="table-cell"></td>
+                    <td id="61" class="table-cell"></td>
+                    <td id="62" class="table-cell"></td>
+                    <td id="63" class="table-cell"></td>
+                    <td id="64" class="table-cell"></td>
+                    <td id="65" class="table-cell"></td>
+                    <td id="66" class="table-cell"></td>
                 </tr>
             </tbody>
         </table>
+        <form class="form">
+            <input type="text" id="guessInput" class="form-input" placeholder="A0">
+            <input type="button" id="fireButton" class="form-input" value="Огонь!">
+        </form>
     </div>
     <script src="scripts/battleship.js"></script>
 </body>
