--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="description" content="Браузерная игра ''Морской Бой''">
     <meta property="og:title" content="Морской Бой">
     <meta property="og:description" content="Браузерная игра ''Морской Бой''">
-    <meta property="og:image" content="images/board.jpg">
+    <meta property="og:url" content="https://vovkahorror.github.io/Battleship/">
+    <meta property="og:image" content="favicons/android-chrome-512x512.png">
 
     <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
