--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <header class="header">Русский военный корабль,<br> иди на х..й!</header>
     <div class="rules">На игровом поле находится четыре трёхпалубных русских корабля. Твоя цель – потопить их все, вводя
         координаты выстрелов в форму внизу.</div>
+    <div class="note"><i>Примечание:</i> Будь внимателен. Координатами выстрела по вертикальной оси являются буквы
+        <b><u>латинского</u></b> алфавита (<b><u>английские, а не русские</u></b>) от "<b><u>A</u></b>" до
+        "<b><u>G</u></b>", по горизонтальной –
+        цифры, начиная от <b><u>нуля</u></b> и до <b><u>шести</u></b>.</div>
     <div class="board">
         <div id="messageArea" class="message-area"></div>
         <table class="table">
